# smhub-flasher

./: .gitignore  .pre-commit-config.yaml  99-smhub-flasher.rules  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yaml  linux-gui-build.yaml  mac-build-intel.yaml  mac-build.yaml  publish.yaml  wdi-build.yaml  windows-gui-build.yaml
docs/: advanced-technical-details.md  expert-mode.md
flatpak/: build-flatpak.sh  run.sh  tech.smlight.SMHUBFlasher.desktop  tech.smlight.SMHUBFlasher.metainfo.xml  tech.smlight.SMHUBFlasher.yml
gui/: .gitignore  README.md  app.py  build-linux.sh  build-mac.sh  build-wdi.ps1  build.ps1  console.py  driver_check.py  flasher_runner.py  pyproject.toml  win_build_helper.py
gui/web/: app.js  index.html  styles.css  xterm.css
schema/: FIRMWARE_MANIFEST_SCHEMA.md  firmware.example.json  firmware.schema.json
scripts/: append_release.py
smhub_flasher/: __init__.py  __main__.py  downloader.py  events.py  exceptions.py  flasher_fsm.py  main.py  monitor.py  transport.py
