[project]
name = "smhub-flasher"
dynamic = ["version"]
description = "Event-driven asynchronous USB flasher for SMHUB"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [
    { name = "SMLIGHT", email = "tl@smlight.tech" },
]
maintainers = [
    { name = "SMLIGHT", email = "tl@smlight.tech" },
]
keywords = ["smhub", "usb", "flasher", "emmc", "embedded", "uboot"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
dependencies = [
    "pyudev>=0.24.0; sys_platform == 'linux'",
    "pyusb>=1.2.1",
    "fastcrc>=0.3.0",
    "tqdm>=4.66.0",
    "packaging>=26.2",
    "rich>=15.0.0",
    "certifi>=2024.0.0; sys_platform == 'darwin'",
]

[project.urls]
Homepage = "https://github.com/smlight-tech/smhub-flasher"
Repository = "https://github.com/smlight-tech/smhub-flasher"
Issues = "https://github.com/smlight-tech/smhub-flasher/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "smhub_flasher/_version.py"

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["smhub_flasher"]

[tool.hatch.build.targets.wheel.shared-data]
"99-smhub-flasher.rules" = "share/smhub_flasher/udev/99-smhub-flasher.rules"

[tool.hatch.build.targets.sdist]
include = [
    "smhub_flasher/**/*.py",
    "smhub_flasher/**/*.bin",
    "99-smhub-flasher.rules",
]

[project.scripts]
smhub-flasher = "smhub_flasher.main:main"

[tool.setuptools.packages.find]
where = ["smhub_flasher"]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv"]

# Generated version file
[[tool.mypy.overrides]]
module = "smhub_flasher._version"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
exclude = ["smhub_flasher/_version.py"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers --tb=short"
markers = [
    "asyncio: marks tests as async"
]
