[project]
name = "smhub-flasher-gui"
version = "0.1.0"
description = "Desktop GUI wrapper for smhub-flasher"
requires-python = ">=3.13,<3.15"
dependencies = [
    "smhub-flasher",
    "pywebview>=5.0",
    "pyserial>=3.5",
    "libusb-package; sys_platform != 'linux'",
    "pywin32>=306; sys_platform == 'win32'",
    "PyGObject>=3.42.0; sys_platform == 'linux'",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
    "Pillow>=10.0.0",
]

[tool.uv]
managed = true

[tool.uv.sources]
smhub-flasher = { path = "..", editable = true }
